# WasmEdge

./: CMakeLists.txt
bindings/rust/wasmedge-sys/: Cargo.toml  build.rs
examples/plugin/wasi-zlib/: Cargo.toml
examples/plugin/wasi-zlib/src/: main.rs
plugins/: CMakeLists.txt
plugins/wasi_zlib/: CMakeLists.txt  Cargo.toml
plugins/wasi_zlib/src/: lib.rs
