[package]
name = "wasi_zlib"
version = "0.1.0"
authors = ["Divy Srivastava <dj.srivastava23@gmail.com>"]
license = "MIT"
edition = "2018"

[dependencies]
libz-sys = { version = "1.1.0", default-features = false, features = ["libc", "static"] }
wasmedge-sys = { version = "0.13.0", path = "../../bindings/rust/wasmedge-sys", features = ["manual_link", "ffi"] }
wasmedge-types = { version = "0.4.0", path = "../../bindings/rust/wasmedge-types" }

[lib]
crate-type = ["cdylib"]
